# compiler_course

./: .gitmodules  CMakeLists.txt  README.md  image_transformer.py  main.cpp  sdl.cpp
images/ppm/: output.ppm
task_1/: CMakeLists.txt
task_1/src/: image_transformer.py  main.cpp  sdl.h
task_2/: README.md  graph.py  log.c  loggerTracePath.cpp
task_3/: CMakeLists.txt  README.md
task_3/ir/: main.ll
task_3/src/: main.cpp  test.cpp
task_5/: README.md
